get messages by chat id, made getting task analysis public
