# main-ms/api.yml
@@ -294,7 +294,7 @@ paths:
         "500":
           description: "Internal Server Error"
   /api/messenger/message/{messageId}/reaction:
-    post:
+    patch:
       tags:
         - Messenger
       parameters:
@@ -319,7 +319,7 @@ paths:
         "401":
           description: "Unauthorized"
         "404":
-          description: "Unauthorized"
+          description: "Not Found"
         "500":
           description: "Internal Server Error"
   /api/messenger/message/{messageId}/read:
@@ -437,5 +437,64 @@ paths:
                       $ref: "#/components/schemas/MessageResponseBody"
         "401":
           description: "Unauthorized"
+        "500":
+          description: "Internal Server Error"
+  /api/messenger/chat/{chatId}/typing:
+    post:
+      tags:
+        - Messenger
+      parameters:
+        - name: chatId
+          in: path
+          required: true
+          schema:
+            type: number
+      requestBody:
+        content:
+          application/json:
+            schema:
+              properties:
+                isTyping:
+                  type: boolean
+                  example: true
+      responses:
+        "200":
+          description: "Success"
+        "401":
+          description: "Unauthorized"
+        "404":
+          description: "Not Found"
+        "500":
+          description: "Internal Server Error"
+  /api/messenger/chat/{chatId}/message:
+    get:
+      tags:
+        - Messenger
+      parameters:
+        - name: chatId
+          in: path
+          required: true
+          schema:
+            type: number
+        - $ref: "#/components/parameters/Limit"
+        - $ref: "#/components/parameters/Offset"
+      responses:
+        "200":
+          description: "Success"
+          content:
+            application/json:
+              schema:
+                type: object
+                allOf:
+                  - properties:
+                      messages:
+                        type: array
+                        items:
+                          $ref: "#/components/schemas/MessageResponseBody"
+                  - $ref: "#/components/schemas/PaginationBodyFields"
+        "401":
+          description: "Unauthorized"
+        "404":
+          description: "Not Found"
         "500":
           description: "Internal Server Error"
